# EDA2

./: CMakeLists.txt  README.md  Usuaris - Full 1.csv  main.c  menu.c  menu.h
Files/: 20users.csv  Informe  Network_Social_Terms  Social_Network_Terms  Social_Network_Terms.txt  Writing.csv
Headers/: 0.menu.h  1.new_user.h  1_menu.h  2.list_users.h  2_network.h  3.operate_user.h  30.ban_user.h  30.ceo_utils.h  31.manage_requests.h  31.send_request.h  32.manage_friends.h  32.manage_requests.h  33.manage_posts.h  33.new_post.h  34.list_posts.h  3_user.h  4_hobbies.h  data_structures.h  decorations.h  dictionary_utils.h  file_control.h  hobbies.h  menu.h  network.h  network_data_control.h  network_file_control.h  new_user.h  option_utils.h  print_network.h  print_utils.h  search_utils.h  sort_utils.h  user.h  utils.h
Sources/: 0.main.c  0.menu.c  0_main.c  1.new_user.c  1_menu.c  2.list_users.c  2_network.c  3.operate_user.c  30.ban_user.c  30.ceo_utils.c  31.manage_requests.c  31.send_request.c  32.manage_friends.c  32.manage_requests.c  33.manage_posts.c  33.new_post.c  34.list_posts.c  3_user.c  4_hobbies.c  data_structures.c  decorations.c  dictionary_utils.c  file_control.c  hobbies.c  main.c  menu.c  network.c  network_data_control.c  network_file_control.c  new_user.c  option_utils.c  print_network.c  print_utils.c  search_utils.c  sort_utils.c  user.c  utils.c
